sqlite: update url tests to not possibly access the internet
this is why these classes are deprecated